objects/Apttus_Config2__CostLineItem__c.object
<CustomObject>
    <description>Represents cost associated with base price of line item</description>
    <fields>
        <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether user can override the adjustment</description>
        <label>Allow Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCostOverride__c</fullName>
        <description>User entered value to override base cost</description>
        <label>Base Cost (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BaseCost__c</fullName>
        <description>Cost defined in related cost price list item</description>
        <label>Base Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the Cost Item associated with the product and the Cost Model</description>
        <inlineHelpText>Id of the Cost Item associated with the product and the Cost Model</inlineHelpText>
        <label>Cost Item</label>
        <referenceTo>Apttus_Config2__CostItem__c</referenceTo>
        <relationshipLabel>Cost Line Items</relationshipLabel>
        <relationshipName>Cost_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the cost type object</description>
        <label>Cost Type</label>
        <referenceTo>Apttus_Config2__CostType__c</referenceTo>
        <relationshipLabel>Cost Line Items</relationshipLabel>
        <relationshipName>CostLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CostType__c</fullName>
        <description>Cost type for the cost line item</description>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Material Cost</fullName>
                </value>
                <value>
                    <fullName>Transportation Cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>Reference to the master line item object</description>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Cost Line Items</relationshipLabel>
        <relationshipName>CostLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NetCost__c</fullName>
        <description>Total cost for a const line item</description>
        <label>Net Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentCostLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to parent cost line item based on hierarchical relationship</description>
        <label>Parent Cost Line Item</label>
        <referenceTo>Apttus_Config2__CostLineItem__c</referenceTo>
        <relationshipLabel>Cost Line Items</relationshipLabel>
        <relationshipName>CostLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Price List Item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Cost Line Items</relationshipLabel>
        <relationshipName>CostLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Represents sequence of cost line item within a  given parent cost.</description>
        <inlineHelpText>Represents sequence of cost line item within a given parent cost</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TransferPriceLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line Item from collaborators cart from which transfer prices was received for this cost line item</description>
        <inlineHelpText>Line Item from collaborators cart from which transfer prices was received for this cost line item</inlineHelpText>
        <label>Transfer Price Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Cost Line Items (Transfer Price Line Item)</relationshipLabel>
        <relationshipName>CostLineItemsTP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cost Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Cost Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>